<resources>
    <string name="app_name" translatable="false">Flashpick</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id" translatable="false">1633003896951106</string>
    <string name="coins">Coins:</string>
    <string name="description">Description:</string>
    <string name="name">Name:</string>
    <string name="username">Username:</string>
    <string name="language">Language:</string>
    <string name="mail" translatable="false">Mail:</string>

</resources>
