<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name"
            android:id="@+id/nameLabel"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/usernameValue"
            android:layout_alignStart="@+id/usernameValue"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/username"
            android:id="@+id/usernameLabel"
            android:layout_below="@+id/nameLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/usernameValue"
            android:layout_alignTop="@+id/usernameLabel"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/mail"
            android:id="@+id/mailLabel"
            android:layout_below="@+id/usernameLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/nameValue"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/description"
            android:id="@+id/descriptionLabel"
            android:layout_below="@+id/languageLabel"
            android:layout_alignLeft="@+id/CoinsLabel"
            android:layout_alignStart="@+id/CoinsLabel"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/coins"
            android:id="@+id/CoinsLabel"
            android:layout_below="@+id/mailLabel"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/coinsValue"
            android:layout_alignTop="@+id/CoinsLabel"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/language"
            android:id="@+id/languageLabel"
            android:layout_below="@+id/CoinsLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/languageSpinner"
            android:layout_alignTop="@+id/languageLabel"
            android:layout_alignLeft="@+id/coinsValue"
            android:layout_alignStart="@+id/coinsValue"
            android:layout_alignBottom="@+id/languageLabel"
            android:spinnerMode="dropdown"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/mailValue"
            android:layout_below="@+id/usernameValue"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_below="@+id/descriptionLabel"
            android:layout_alignLeft="@+id/descriptionLabel"
            android:layout_alignStart="@+id/descriptionLabel"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:inputType="textNoSuggestions"/>

</RelativeLayout>